// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConditionalFilter render should render correctly - isDisabled 1`] = `
<Fragment>
  <Component
    className="ins-c-conditional-filter"
  >
    <Component>
      <Component
        className="ins-c-conditional-filter__group"
        dropdownItems={
          Array [
            <Unknown
              component="button"
              isHovered={false}
              onClick={[Function]}
            >
              Simple text 1
            </Unknown>,
            <Unknown
              component="button"
              isHovered={false}
              onClick={[Function]}
            >
              Simple text 2
            </Unknown>,
            <Unknown
              component="button"
              isHovered={false}
              onClick={[Function]}
            >
              Checkbox
            </Unknown>,
            <Unknown
              component="button"
              isHovered={false}
              onClick={[Function]}
            >
              Radio filter
            </Unknown>,
            <Unknown
              component="button"
              isHovered={true}
              onClick={[Function]}
            >
              No value
            </Unknown>,
          ]
        }
        isOpen={false}
        onSelect={[Function]}
        toggle={
          <Unknown
            className=""
            isDisabled={true}
            onToggle={[Function]}
          >
            <FilterIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            />
            <span
              className="ins-c-conditional-filter__value-selector"
            >
              No value
            </span>
          </Unknown>
        }
      />
    </Component>
    <Component
      isFilled={true}
    >
      <Text
        isDisabled={false}
        onSubmit={[Function]}
        placeholder="Filter by no value"
        value=""
      />
    </Component>
  </Component>
</Fragment>
`;

exports[`ConditionalFilter render should render correctly 1`] = `
<Fragment>
  <div
    className="ins-c-conditional-filter"
  >
    <Text
      id="default-input"
      isDisabled={false}
      onChange={[Function]}
      onSubmit={[Function]}
      value=""
      widget-type="InsightsInput"
    />
  </div>
</Fragment>
`;

exports[`ConditionalFilter render should render correctly checkbox with value checkbox-filter 1`] = `
<Fragment>
  <Component
    className="ins-c-conditional-filter"
  >
    <Component>
      <Component
        className="ins-c-conditional-filter__group"
        dropdownItems={
          Array [
            <Unknown
              component="button"
              isHovered={false}
              onClick={[Function]}
            >
              Simple text 1
            </Unknown>,
            <Unknown
              component="button"
              isHovered={false}
              onClick={[Function]}
            >
              Simple text 2
            </Unknown>,
            <Unknown
              component="button"
              isHovered={true}
              onClick={[Function]}
            >
              Checkbox
            </Unknown>,
            <Unknown
              component="button"
              isHovered={false}
              onClick={[Function]}
            >
              Radio filter
            </Unknown>,
            <Unknown
              component="button"
              isHovered={false}
              onClick={[Function]}
            >
              No value
            </Unknown>,
          ]
        }
        isOpen={false}
        onSelect={[Function]}
        toggle={
          <Unknown
            className=""
            isDisabled={false}
            onToggle={[Function]}
          >
            <FilterIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            />
            <span
              className="ins-c-conditional-filter__value-selector"
            >
              Checkbox
            </span>
          </Unknown>
        }
      />
    </Component>
    <Component
      isFilled={true}
    >
      <Checkbox
        id="checkbox-filter"
        isDisabled={false}
        items={
          Array [
            Object {
              "label": <div>
                custom value
              </div>,
              "value": "some-value",
            },
            Object {
              "label": "another",
              "value": "another-value",
            },
            Object {
              "label": "no value",
            },
          ]
        }
        onChange={[Function]}
        placeholder="Filter by checkbox"
        value={Array []}
      />
    </Component>
  </Component>
</Fragment>
`;

exports[`ConditionalFilter render should render correctly no value with value undefined 1`] = `
<Fragment>
  <Component
    className="ins-c-conditional-filter"
  >
    <Component>
      <Component
        className="ins-c-conditional-filter__group"
        dropdownItems={
          Array [
            <Unknown
              component="button"
              isHovered={true}
              onClick={[Function]}
            >
              Simple text 1
            </Unknown>,
            <Unknown
              component="button"
              isHovered={false}
              onClick={[Function]}
            >
              Simple text 2
            </Unknown>,
            <Unknown
              component="button"
              isHovered={false}
              onClick={[Function]}
            >
              Checkbox
            </Unknown>,
            <Unknown
              component="button"
              isHovered={false}
              onClick={[Function]}
            >
              Radio filter
            </Unknown>,
            <Unknown
              component="button"
              isHovered={false}
              onClick={[Function]}
            >
              No value
            </Unknown>,
          ]
        }
        isOpen={false}
        onSelect={[Function]}
        toggle={
          <Unknown
            className=""
            isDisabled={false}
            onToggle={[Function]}
          >
            <FilterIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            />
            <span
              className="ins-c-conditional-filter__value-selector"
            >
              Simple text 1
            </span>
          </Unknown>
        }
      />
    </Component>
    <Component
      isFilled={true}
    >
      <Text
        id=""
        isDisabled={false}
        onSubmit={[Function]}
        placeholder="Filter by simple text 1"
        value=""
      />
    </Component>
  </Component>
</Fragment>
`;

exports[`ConditionalFilter render should render correctly radio filter with value radio-filter 1`] = `
<Fragment>
  <Component
    className="ins-c-conditional-filter"
  >
    <Component>
      <Component
        className="ins-c-conditional-filter__group"
        dropdownItems={
          Array [
            <Unknown
              component="button"
              isHovered={false}
              onClick={[Function]}
            >
              Simple text 1
            </Unknown>,
            <Unknown
              component="button"
              isHovered={false}
              onClick={[Function]}
            >
              Simple text 2
            </Unknown>,
            <Unknown
              component="button"
              isHovered={false}
              onClick={[Function]}
            >
              Checkbox
            </Unknown>,
            <Unknown
              component="button"
              isHovered={true}
              onClick={[Function]}
            >
              Radio filter
            </Unknown>,
            <Unknown
              component="button"
              isHovered={false}
              onClick={[Function]}
            >
              No value
            </Unknown>,
          ]
        }
        isOpen={false}
        onSelect={[Function]}
        toggle={
          <Unknown
            className=""
            isDisabled={false}
            onToggle={[Function]}
          >
            <FilterIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            />
            <span
              className="ins-c-conditional-filter__value-selector"
            >
              Radio filter
            </span>
          </Unknown>
        }
      />
    </Component>
    <Component
      isFilled={true}
    >
      <Radio
        id="radio-filter"
        isDisabled={false}
        items={
          Array [
            Object {
              "label": <div>
                custom value
              </div>,
              "value": "some-value",
            },
            Object {
              "label": "another",
              "value": "another-value",
            },
          ]
        }
        onChange={[Function]}
        placeholder="Filter by radio filter"
      />
    </Component>
  </Component>
</Fragment>
`;

exports[`ConditionalFilter render should render correctly simple text 1 with value simple-text-1 1`] = `
<Fragment>
  <Component
    className="ins-c-conditional-filter"
  >
    <Component>
      <Component
        className="ins-c-conditional-filter__group"
        dropdownItems={
          Array [
            <Unknown
              component="button"
              isHovered={true}
              onClick={[Function]}
            >
              Simple text 1
            </Unknown>,
            <Unknown
              component="button"
              isHovered={false}
              onClick={[Function]}
            >
              Simple text 2
            </Unknown>,
            <Unknown
              component="button"
              isHovered={false}
              onClick={[Function]}
            >
              Checkbox
            </Unknown>,
            <Unknown
              component="button"
              isHovered={false}
              onClick={[Function]}
            >
              Radio filter
            </Unknown>,
            <Unknown
              component="button"
              isHovered={false}
              onClick={[Function]}
            >
              No value
            </Unknown>,
          ]
        }
        isOpen={false}
        onSelect={[Function]}
        toggle={
          <Unknown
            className=""
            isDisabled={false}
            onToggle={[Function]}
          >
            <FilterIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            />
            <span
              className="ins-c-conditional-filter__value-selector"
            >
              Simple text 1
            </span>
          </Unknown>
        }
      />
    </Component>
    <Component
      isFilled={true}
    >
      <Text
        id="simple-text-1"
        isDisabled={false}
        onSubmit={[Function]}
        placeholder="Filter by simple text 1"
        value=""
      />
    </Component>
  </Component>
</Fragment>
`;

exports[`ConditionalFilter render should render correctly simple text 2 with value simple-text-2 1`] = `
<Fragment>
  <Component
    className="ins-c-conditional-filter"
  >
    <Component>
      <Component
        className="ins-c-conditional-filter__group"
        dropdownItems={
          Array [
            <Unknown
              component="button"
              isHovered={false}
              onClick={[Function]}
            >
              Simple text 1
            </Unknown>,
            <Unknown
              component="button"
              isHovered={true}
              onClick={[Function]}
            >
              Simple text 2
            </Unknown>,
            <Unknown
              component="button"
              isHovered={false}
              onClick={[Function]}
            >
              Checkbox
            </Unknown>,
            <Unknown
              component="button"
              isHovered={false}
              onClick={[Function]}
            >
              Radio filter
            </Unknown>,
            <Unknown
              component="button"
              isHovered={false}
              onClick={[Function]}
            >
              No value
            </Unknown>,
          ]
        }
        isOpen={false}
        onSelect={[Function]}
        toggle={
          <Unknown
            className=""
            isDisabled={false}
            onToggle={[Function]}
          >
            <FilterIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            />
            <span
              className="ins-c-conditional-filter__value-selector"
            >
              Simple text 2
            </span>
          </Unknown>
        }
      />
    </Component>
    <Component
      isFilled={true}
    >
      <Text
        id="simple-text-2"
        isDisabled={false}
        onSubmit={[Function]}
        placeholder="Filter by simple text 2"
        value="some-value blaa"
      />
    </Component>
  </Component>
</Fragment>
`;

exports[`ConditionalFilter render should render correctly with config - each item as disabled 1`] = `
<Fragment>
  <Component
    className="ins-c-conditional-filter"
  >
    <Component>
      <Component
        className="ins-c-conditional-filter__group"
        dropdownItems={
          Array [
            <Unknown
              component="button"
              isHovered={false}
              onClick={[Function]}
            >
              Simple text 1
            </Unknown>,
            <Unknown
              component="button"
              isHovered={false}
              onClick={[Function]}
            >
              Simple text 2
            </Unknown>,
            <Unknown
              component="button"
              isHovered={false}
              onClick={[Function]}
            >
              Checkbox
            </Unknown>,
            <Unknown
              component="button"
              isHovered={false}
              onClick={[Function]}
            >
              Radio filter
            </Unknown>,
            <Unknown
              component="button"
              isHovered={true}
              onClick={[Function]}
            >
              No value
            </Unknown>,
          ]
        }
        isOpen={false}
        onSelect={[Function]}
        toggle={
          <Unknown
            className=""
            isDisabled={false}
            onToggle={[Function]}
          >
            <FilterIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            />
            <span
              className="ins-c-conditional-filter__value-selector"
            >
              No value
            </span>
          </Unknown>
        }
      />
    </Component>
    <Component
      isFilled={true}
    >
      <Text
        isDisabled={true}
        onSubmit={[Function]}
        placeholder="Filter by no value"
        value=""
      />
    </Component>
  </Component>
</Fragment>
`;

exports[`ConditionalFilter render should render correctly with config 1`] = `
<Fragment>
  <Component
    className="ins-c-conditional-filter"
  >
    <Component>
      <Component
        className="ins-c-conditional-filter__group"
        dropdownItems={
          Array [
            <Unknown
              component="button"
              isHovered={false}
              onClick={[Function]}
            >
              Simple text 1
            </Unknown>,
            <Unknown
              component="button"
              isHovered={false}
              onClick={[Function]}
            >
              Simple text 2
            </Unknown>,
            <Unknown
              component="button"
              isHovered={false}
              onClick={[Function]}
            >
              Checkbox
            </Unknown>,
            <Unknown
              component="button"
              isHovered={false}
              onClick={[Function]}
            >
              Radio filter
            </Unknown>,
            <Unknown
              component="button"
              isHovered={true}
              onClick={[Function]}
            >
              No value
            </Unknown>,
          ]
        }
        isOpen={false}
        onSelect={[Function]}
        toggle={
          <Unknown
            className=""
            isDisabled={false}
            onToggle={[Function]}
          >
            <FilterIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            />
            <span
              className="ins-c-conditional-filter__value-selector"
            >
              No value
            </span>
          </Unknown>
        }
      />
    </Component>
    <Component
      isFilled={true}
    >
      <Text
        isDisabled={false}
        onSubmit={[Function]}
        placeholder="Filter by no value"
        value=""
      />
    </Component>
  </Component>
</Fragment>
`;

exports[`ConditionalFilter render should render correctly with one filter 1`] = `
<Fragment>
  <Component
    className="ins-c-conditional-filter"
  >
    <Component
      isFilled={true}
    >
      <Text
        isDisabled={false}
        onSubmit={[Function]}
        placeholder="Filter by simple text 1"
        value=""
      />
    </Component>
  </Component>
</Fragment>
`;

exports[`ConditionalFilter render should render correctly with with the active label hidden 1`] = `
<Fragment>
  <Component
    className="ins-c-conditional-filter"
  >
    <Component>
      <Component
        className="ins-c-conditional-filter__group"
        dropdownItems={
          Array [
            <Unknown
              component="button"
              isHovered={false}
              onClick={[Function]}
            >
              Simple text 1
            </Unknown>,
            <Unknown
              component="button"
              isHovered={false}
              onClick={[Function]}
            >
              Simple text 2
            </Unknown>,
            <Unknown
              component="button"
              isHovered={false}
              onClick={[Function]}
            >
              Checkbox
            </Unknown>,
            <Unknown
              component="button"
              isHovered={false}
              onClick={[Function]}
            >
              Radio filter
            </Unknown>,
            <Unknown
              component="button"
              isHovered={true}
              onClick={[Function]}
            >
              No value
            </Unknown>,
          ]
        }
        isOpen={false}
        onSelect={[Function]}
        toggle={
          <Unknown
            className="ins-c-conditional-filter__no-label"
            isDisabled={false}
            onToggle={[Function]}
          >
            <FilterIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            />
          </Unknown>
        }
      />
    </Component>
    <Component
      isFilled={true}
    >
      <Text
        isDisabled={false}
        onSubmit={[Function]}
        placeholder="Filter by no value"
        value=""
      />
    </Component>
  </Component>
</Fragment>
`;
